<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    

   <TextView
       	android:id="@+id/jugadores_ficha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/jugadores_ficha"
        android:gravity="center" 
        android:textColor="@color/version_bkgrd"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <ImageView
               android:id="@+id/fotoJugadorFicha"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/logosm" />

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="vertical" >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/txtNombreFicha"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/txtNombre" />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/txtFechaNacimientoFicha"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/txtFechaNacimiento" />

               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1" >

               <TextView
                   android:id="@+id/txtPesoFicha"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/txtPeso" />
           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <TextView
                   android:id="@+id/txtAlturaFicha"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/txtAltura" />
           </RelativeLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/txtTelefonoFicha"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/txtTelefono" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="20dp" >

           <Button
               android:id="@+id/botonFichaFicha"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:onClick="roll"
               android:text="@string/ficha_button"
               android:textColor="@color/background_color" />

           <Button
               android:id="@+id/botonDetallesFicha"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/detalles_button"
               android:textColor="@color/background_color" />

           <Button
               android:id="@+id/botonEditarFicha"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/editar_button"
               android:textColor="@color/background_color" />
       </LinearLayout>

   </LinearLayout>

    </LinearLayout>

