<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    

   <TextView
       	android:id="@+id/jugadores_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/jugadores_title"
        android:gravity="center" 
        android:textColor="@color/version_bkgrd"/>
   
   <TextView 
		    android:id="@+id/txtSeleccionadoJugadores"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="" />

   <ListView
       android:id="@+id/lstAllJugadores"
       android:layout_width="match_parent"
       android:layout_height="353dp" >

   </ListView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="40dp" >

       <Button
           android:id="@+id/botonAnadirJugador"
           android:layout_width="130dp"
           android:layout_height="wrap_content"
           android:onClick="roll"
           android:text="@string/anadir_button"
           android:textColor="@color/background_color" />

       <Button
           android:id="@+id/botonEliminarJugador"
           android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:text="@string/eliminar_button"
           android:textColor="@color/version_color" />

       <Button
           android:id="@+id/botonCrearJugador"
           android:layout_width="130dp"
           android:layout_height="wrap_content"
           android:text="@string/crear_button"
           android:textColor="@color/background_color" />

   </LinearLayout>

    </LinearLayout>

