<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    

   <TextView
       	android:id="@+id/entrenamientos_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrenamientos_title"
        android:gravity="center" 
        android:textColor="@color/version_bkgrd"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >

      <Spinner
           android:id="@+id/spinBuscarCategoria"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:layout_weight="1" />

   </LinearLayout>

   <ListView
       android:id="@android:id/list"
       android:layout_width="match_parent"
       android:layout_height="353dp" >

   </ListView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="40dp" >

       <Button
           android:id="@+id/botonbuscar_entrenamiento"
           android:layout_width="130dp"
           android:layout_height="wrap_content"
           android:onClick="roll"
           android:text="@string/buscar_button"
           android:textColor="@color/background_color" />

       <Button
           android:id="@+id/botoneliminar_entrenamiento"
           android:layout_width="50dp"
           android:layout_height="wrap_content"
           android:text="@string/eliminar_button"
           android:textColor="@color/version_color" />

      

   </LinearLayout>

    </LinearLayout>

